assembler/assembler4435/parser.out
Created by PLY version 3.10 (http://www.dabeaz.com/ply)

Unused terminals:

    CHK_MACRO
    CHK

Grammar

Rule 0     S' -> program
Rule 1     program -> inst instlist
Rule 2     instlist -> inst instlist
Rule 3     instlist -> <empty>
Rule 4     inst -> WORD NUMBER NUMBER
Rule 5     inst -> FILL NUMBER NUMBER
Rule 6     inst -> NOP
Rule 7     inst -> EI
Rule 8     inst -> DI
Rule 9     inst -> SWI NUMBER
Rule 10    inst -> USR
Rule 11    inst -> LD REGISTER REGISTER NUMBER
Rule 12    inst -> ST REGISTER REGISTER NUMBER
Rule 13    inst -> MOV REGISTER REGISTER
Rule 14    inst -> LIL REGISTER NUMBER
Rule 15    inst -> LIH REGISTER NUMBER
Rule 16    inst -> ADD REGISTER REGISTER
Rule 17    inst -> ADC REGISTER REGISTER
Rule 18    inst -> SUB REGISTER REGISTER
Rule 19    inst -> SBC REGISTER REGISTER
Rule 20    inst -> AND REGISTER REGISTER
Rule 21    inst -> OR REGISTER REGISTER
Rule 22    inst -> XOR REGISTER REGISTER
Rule 23    inst -> NOT REGISTER REGISTER
Rule 24    inst -> SL REGISTER REGISTER
Rule 25    inst -> SRL REGISTER REGISTER
Rule 26    inst -> SRA REGISTER REGISTER
Rule 27    inst -> RRA REGISTER REGISTER
Rule 28    inst -> RR REGISTER REGISTER
Rule 29    inst -> RL REGISTER REGISTER
Rule 30    inst -> JMP REGISTER NUMBER
Rule 31    inst -> JAL REGISTER NUMBER
Rule 32    inst -> BR NUMBER
Rule 33    inst -> BC NUMBER
Rule 34    inst -> BO NUMBER
Rule 35    inst -> BN NUMBER
Rule 36    inst -> BZ NUMBER

Terminals, with rules where they appear

ADC                  : 17
ADD                  : 16
AND                  : 20
BC                   : 33
BN                   : 35
BO                   : 34
BR                   : 32
BZ                   : 36
CHK                  : 
CHK_MACRO            : 
DI                   : 8
EI                   : 7
FILL                 : 5
JAL                  : 31
JMP                  : 30
LD                   : 11
LIH                  : 15
LIL                  : 14
MOV                  : 13
NOP                  : 6
NOT                  : 23
NUMBER               : 4 4 5 5 9 11 12 14 15 30 31 32 33 34 35 36
OR                   : 21
REGISTER             : 11 11 12 12 13 13 14 15 16 16 17 17 18 18 19 19 20 20 21 21 22 22 23 23 24 24 25 25 26 26 27 27 28 28 29 29 30 31
RL                   : 29
RR                   : 28
RRA                  : 27
SBC                  : 19
SL                   : 24
SRA                  : 26
SRL                  : 25
ST                   : 12
SUB                  : 18
SWI                  : 9
USR                  : 10
WORD                 : 4
XOR                  : 22
error                : 

Nonterminals, with rules where they appear

inst                 : 1 2
instlist             : 1 2
program              : 0

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . inst instlist
    (4) inst -> . WORD NUMBER NUMBER
    (5) inst -> . FILL NUMBER NUMBER
    (6) inst -> . NOP
    (7) inst -> . EI
    (8) inst -> . DI
    (9) inst -> . SWI NUMBER
    (10) inst -> . USR
    (11) inst -> . LD REGISTER REGISTER NUMBER
    (12) inst -> . ST REGISTER REGISTER NUMBER
    (13) inst -> . MOV REGISTER REGISTER
    (14) inst -> . LIL REGISTER NUMBER
    (15) inst -> . LIH REGISTER NUMBER
    (16) inst -> . ADD REGISTER REGISTER
    (17) inst -> . ADC REGISTER REGISTER
    (18) inst -> . SUB REGISTER REGISTER
    (19) inst -> . SBC REGISTER REGISTER
    (20) inst -> . AND REGISTER REGISTER
    (21) inst -> . OR REGISTER REGISTER
    (22) inst -> . XOR REGISTER REGISTER
    (23) inst -> . NOT REGISTER REGISTER
    (24) inst -> . SL REGISTER REGISTER
    (25) inst -> . SRL REGISTER REGISTER
    (26) inst -> . SRA REGISTER REGISTER
    (27) inst -> . RRA REGISTER REGISTER
    (28) inst -> . RR REGISTER REGISTER
    (29) inst -> . RL REGISTER REGISTER
    (30) inst -> . JMP REGISTER NUMBER
    (31) inst -> . JAL REGISTER NUMBER
    (32) inst -> . BR NUMBER
    (33) inst -> . BC NUMBER
    (34) inst -> . BO NUMBER
    (35) inst -> . BN NUMBER
    (36) inst -> . BZ NUMBER

    WORD            shift and go to state 3
    FILL            shift and go to state 12
    NOP             shift and go to state 28
    EI              shift and go to state 8
    DI              shift and go to state 15
    SWI             shift and go to state 11
    USR             shift and go to state 7
    LD              shift and go to state 33
    ST              shift and go to state 18
    MOV             shift and go to state 35
    LIL             shift and go to state 27
    LIH             shift and go to state 6
    ADD             shift and go to state 25
    ADC             shift and go to state 24
    SUB             shift and go to state 10
    SBC             shift and go to state 16
    AND             shift and go to state 9
    OR              shift and go to state 17
    XOR             shift and go to state 20
    NOT             shift and go to state 22
    SL              shift and go to state 5
    SRL             shift and go to state 19
    SRA             shift and go to state 30
    RRA             shift and go to state 13
    RR              shift and go to state 34
    RL              shift and go to state 2
    JMP             shift and go to state 4
    JAL             shift and go to state 1
    BR              shift and go to state 29
    BC              shift and go to state 23
    BO              shift and go to state 21
    BN              shift and go to state 32
    BZ              shift and go to state 26

    program                        shift and go to state 31
    inst                           shift and go to state 14

state 1

    (31) inst -> JAL . REGISTER NUMBER

    REGISTER        shift and go to state 36


state 2

    (29) inst -> RL . REGISTER REGISTER

    REGISTER        shift and go to state 37


state 3

    (4) inst -> WORD . NUMBER NUMBER

    NUMBER          shift and go to state 38


state 4

    (30) inst -> JMP . REGISTER NUMBER

    REGISTER        shift and go to state 39


state 5

    (24) inst -> SL . REGISTER REGISTER

    REGISTER        shift and go to state 40


state 6

    (15) inst -> LIH . REGISTER NUMBER

    REGISTER        shift and go to state 41


state 7

    (10) inst -> USR .

    WORD            reduce using rule 10 (inst -> USR .)
    FILL            reduce using rule 10 (inst -> USR .)
    NOP             reduce using rule 10 (inst -> USR .)
    EI              reduce using rule 10 (inst -> USR .)
    DI              reduce using rule 10 (inst -> USR .)
    SWI             reduce using rule 10 (inst -> USR .)
    USR             reduce using rule 10 (inst -> USR .)
    LD              reduce using rule 10 (inst -> USR .)
    ST              reduce using rule 10 (inst -> USR .)
    MOV             reduce using rule 10 (inst -> USR .)
    LIL             reduce using rule 10 (inst -> USR .)
    LIH             reduce using rule 10 (inst -> USR .)
    ADD             reduce using rule 10 (inst -> USR .)
    ADC             reduce using rule 10 (inst -> USR .)
    SUB             reduce using rule 10 (inst -> USR .)
    SBC             reduce using rule 10 (inst -> USR .)
    AND             reduce using rule 10 (inst -> USR .)
    OR              reduce using rule 10 (inst -> USR .)
    XOR             reduce using rule 10 (inst -> USR .)
    NOT             reduce using rule 10 (inst -> USR .)
    SL              reduce using rule 10 (inst -> USR .)
    SRL             reduce using rule 10 (inst -> USR .)
    SRA             reduce using rule 10 (inst -> USR .)
    RRA             reduce using rule 10 (inst -> USR .)
    RR              reduce using rule 10 (inst -> USR .)
    RL              reduce using rule 10 (inst -> USR .)
    JMP             reduce using rule 10 (inst -> USR .)
    JAL             reduce using rule 10 (inst -> USR .)
    BR              reduce using rule 10 (inst -> USR .)
    BC              reduce using rule 10 (inst -> USR .)
    BO              reduce using rule 10 (inst -> USR .)
    BN              reduce using rule 10 (inst -> USR .)
    BZ              reduce using rule 10 (inst -> USR .)
    $end            reduce using rule 10 (inst -> USR .)


state 8

    (7) inst -> EI .

    WORD            reduce using rule 7 (inst -> EI .)
    FILL            reduce using rule 7 (inst -> EI .)
    NOP             reduce using rule 7 (inst -> EI .)
    EI              reduce using rule 7 (inst -> EI .)
    DI              reduce using rule 7 (inst -> EI .)
    SWI             reduce using rule 7 (inst -> EI .)
    USR             reduce using rule 7 (inst -> EI .)
    LD              reduce using rule 7 (inst -> EI .)
    ST              reduce using rule 7 (inst -> EI .)
    MOV             reduce using rule 7 (inst -> EI .)
    LIL             reduce using rule 7 (inst -> EI .)
    LIH             reduce using rule 7 (inst -> EI .)
    ADD             reduce using rule 7 (inst -> EI .)
    ADC             reduce using rule 7 (inst -> EI .)
    SUB             reduce using rule 7 (inst -> EI .)
    SBC             reduce using rule 7 (inst -> EI .)
    AND             reduce using rule 7 (inst -> EI .)
    OR              reduce using rule 7 (inst -> EI .)
    XOR             reduce using rule 7 (inst -> EI .)
    NOT             reduce using rule 7 (inst -> EI .)
    SL              reduce using rule 7 (inst -> EI .)
    SRL             reduce using rule 7 (inst -> EI .)
    SRA             reduce using rule 7 (inst -> EI .)
    RRA             reduce using rule 7 (inst -> EI .)
    RR              reduce using rule 7 (inst -> EI .)
    RL              reduce using rule 7 (inst -> EI .)
    JMP             reduce using rule 7 (inst -> EI .)
    JAL             reduce using rule 7 (inst -> EI .)
    BR              reduce using rule 7 (inst -> EI .)
    BC              reduce using rule 7 (inst -> EI .)
    BO              reduce using rule 7 (inst -> EI .)
    BN              reduce using rule 7 (inst -> EI .)
    BZ              reduce using rule 7 (inst -> EI .)
    $end            reduce using rule 7 (inst -> EI .)


state 9

    (20) inst -> AND . REGISTER REGISTER

    REGISTER        shift and go to state 42


state 10

    (18) inst -> SUB . REGISTER REGISTER

    REGISTER        shift and go to state 43


state 11

    (9) inst -> SWI . NUMBER

    NUMBER          shift and go to state 44


state 12

    (5) inst -> FILL . NUMBER NUMBER

    NUMBER          shift and go to state 45


state 13

    (27) inst -> RRA . REGISTER REGISTER

    REGISTER        shift and go to state 46


state 14

    (1) program -> inst . instlist
    (2) instlist -> . inst instlist
    (3) instlist -> .
    (4) inst -> . WORD NUMBER NUMBER
    (5) inst -> . FILL NUMBER NUMBER
    (6) inst -> . NOP
    (7) inst -> . EI
    (8) inst -> . DI
    (9) inst -> . SWI NUMBER
    (10) inst -> . USR
    (11) inst -> . LD REGISTER REGISTER NUMBER
    (12) inst -> . ST REGISTER REGISTER NUMBER
    (13) inst -> . MOV REGISTER REGISTER
    (14) inst -> . LIL REGISTER NUMBER
    (15) inst -> . LIH REGISTER NUMBER
    (16) inst -> . ADD REGISTER REGISTER
    (17) inst -> . ADC REGISTER REGISTER
    (18) inst -> . SUB REGISTER REGISTER
    (19) inst -> . SBC REGISTER REGISTER
    (20) inst -> . AND REGISTER REGISTER
    (21) inst -> . OR REGISTER REGISTER
    (22) inst -> . XOR REGISTER REGISTER
    (23) inst -> . NOT REGISTER REGISTER
    (24) inst -> . SL REGISTER REGISTER
    (25) inst -> . SRL REGISTER REGISTER
    (26) inst -> . SRA REGISTER REGISTER
    (27) inst -> . RRA REGISTER REGISTER
    (28) inst -> . RR REGISTER REGISTER
    (29) inst -> . RL REGISTER REGISTER
    (30) inst -> . JMP REGISTER NUMBER
    (31) inst -> . JAL REGISTER NUMBER
    (32) inst -> . BR NUMBER
    (33) inst -> . BC NUMBER
    (34) inst -> . BO NUMBER
    (35) inst -> . BN NUMBER
    (36) inst -> . BZ NUMBER

    $end            reduce using rule 3 (instlist -> .)
    WORD            shift and go to state 3
    FILL            shift and go to state 12
    NOP             shift and go to state 28
    EI              shift and go to state 8
    DI              shift and go to state 15
    SWI             shift and go to state 11
    USR             shift and go to state 7
    LD              shift and go to state 33
    ST              shift and go to state 18
    MOV             shift and go to state 35
    LIL             shift and go to state 27
    LIH             shift and go to state 6
    ADD             shift and go to state 25
    ADC             shift and go to state 24
    SUB             shift and go to state 10
    SBC             shift and go to state 16
    AND             shift and go to state 9
    OR              shift and go to state 17
    XOR             shift and go to state 20
    NOT             shift and go to state 22
    SL              shift and go to state 5
    SRL             shift and go to state 19
    SRA             shift and go to state 30
    RRA             shift and go to state 13
    RR              shift and go to state 34
    RL              shift and go to state 2
    JMP             shift and go to state 4
    JAL             shift and go to state 1
    BR              shift and go to state 29
    BC              shift and go to state 23
    BO              shift and go to state 21
    BN              shift and go to state 32
    BZ              shift and go to state 26

    inst                           shift and go to state 48
    instlist                       shift and go to state 47

state 15

    (8) inst -> DI .

    WORD            reduce using rule 8 (inst -> DI .)
    FILL            reduce using rule 8 (inst -> DI .)
    NOP             reduce using rule 8 (inst -> DI .)
    EI              reduce using rule 8 (inst -> DI .)
    DI              reduce using rule 8 (inst -> DI .)
    SWI             reduce using rule 8 (inst -> DI .)
    USR             reduce using rule 8 (inst -> DI .)
    LD              reduce using rule 8 (inst -> DI .)
    ST              reduce using rule 8 (inst -> DI .)
    MOV             reduce using rule 8 (inst -> DI .)
    LIL             reduce using rule 8 (inst -> DI .)
    LIH             reduce using rule 8 (inst -> DI .)
    ADD             reduce using rule 8 (inst -> DI .)
    ADC             reduce using rule 8 (inst -> DI .)
    SUB             reduce using rule 8 (inst -> DI .)
    SBC             reduce using rule 8 (inst -> DI .)
    AND             reduce using rule 8 (inst -> DI .)
    OR              reduce using rule 8 (inst -> DI .)
    XOR             reduce using rule 8 (inst -> DI .)
    NOT             reduce using rule 8 (inst -> DI .)
    SL              reduce using rule 8 (inst -> DI .)
    SRL             reduce using rule 8 (inst -> DI .)
    SRA             reduce using rule 8 (inst -> DI .)
    RRA             reduce using rule 8 (inst -> DI .)
    RR              reduce using rule 8 (inst -> DI .)
    RL              reduce using rule 8 (inst -> DI .)
    JMP             reduce using rule 8 (inst -> DI .)
    JAL             reduce using rule 8 (inst -> DI .)
    BR              reduce using rule 8 (inst -> DI .)
    BC              reduce using rule 8 (inst -> DI .)
    BO              reduce using rule 8 (inst -> DI .)
    BN              reduce using rule 8 (inst -> DI .)
    BZ              reduce using rule 8 (inst -> DI .)
    $end            reduce using rule 8 (inst -> DI .)


state 16

    (19) inst -> SBC . REGISTER REGISTER

    REGISTER        shift and go to state 49


state 17

    (21) inst -> OR . REGISTER REGISTER

    REGISTER        shift and go to state 50


state 18

    (12) inst -> ST . REGISTER REGISTER NUMBER

    REGISTER        shift and go to state 51


state 19

    (25) inst -> SRL . REGISTER REGISTER

    REGISTER        shift and go to state 52


state 20

    (22) inst -> XOR . REGISTER REGISTER

    REGISTER        shift and go to state 53


state 21

    (34) inst -> BO . NUMBER

    NUMBER          shift and go to state 54


state 22

    (23) inst -> NOT . REGISTER REGISTER

    REGISTER        shift and go to state 55


state 23

    (33) inst -> BC . NUMBER

    NUMBER          shift and go to state 56


state 24

    (17) inst -> ADC . REGISTER REGISTER

    REGISTER        shift and go to state 57


state 25

    (16) inst -> ADD . REGISTER REGISTER

    REGISTER        shift and go to state 58


state 26

    (36) inst -> BZ . NUMBER

    NUMBER          shift and go to state 59


state 27

    (14) inst -> LIL . REGISTER NUMBER

    REGISTER        shift and go to state 60


state 28

    (6) inst -> NOP .

    WORD            reduce using rule 6 (inst -> NOP .)
    FILL            reduce using rule 6 (inst -> NOP .)
    NOP             reduce using rule 6 (inst -> NOP .)
    EI              reduce using rule 6 (inst -> NOP .)
    DI              reduce using rule 6 (inst -> NOP .)
    SWI             reduce using rule 6 (inst -> NOP .)
    USR             reduce using rule 6 (inst -> NOP .)
    LD              reduce using rule 6 (inst -> NOP .)
    ST              reduce using rule 6 (inst -> NOP .)
    MOV             reduce using rule 6 (inst -> NOP .)
    LIL             reduce using rule 6 (inst -> NOP .)
    LIH             reduce using rule 6 (inst -> NOP .)
    ADD             reduce using rule 6 (inst -> NOP .)
    ADC             reduce using rule 6 (inst -> NOP .)
    SUB             reduce using rule 6 (inst -> NOP .)
    SBC             reduce using rule 6 (inst -> NOP .)
    AND             reduce using rule 6 (inst -> NOP .)
    OR              reduce using rule 6 (inst -> NOP .)
    XOR             reduce using rule 6 (inst -> NOP .)
    NOT             reduce using rule 6 (inst -> NOP .)
    SL              reduce using rule 6 (inst -> NOP .)
    SRL             reduce using rule 6 (inst -> NOP .)
    SRA             reduce using rule 6 (inst -> NOP .)
    RRA             reduce using rule 6 (inst -> NOP .)
    RR              reduce using rule 6 (inst -> NOP .)
    RL              reduce using rule 6 (inst -> NOP .)
    JMP             reduce using rule 6 (inst -> NOP .)
    JAL             reduce using rule 6 (inst -> NOP .)
    BR              reduce using rule 6 (inst -> NOP .)
    BC              reduce using rule 6 (inst -> NOP .)
    BO              reduce using rule 6 (inst -> NOP .)
    BN              reduce using rule 6 (inst -> NOP .)
    BZ              reduce using rule 6 (inst -> NOP .)
    $end            reduce using rule 6 (inst -> NOP .)


state 29

    (32) inst -> BR . NUMBER

    NUMBER          shift and go to state 61


state 30

    (26) inst -> SRA . REGISTER REGISTER

    REGISTER        shift and go to state 62


state 31

    (0) S' -> program .



state 32

    (35) inst -> BN . NUMBER

    NUMBER          shift and go to state 63


state 33

    (11) inst -> LD . REGISTER REGISTER NUMBER

    REGISTER        shift and go to state 64


state 34

    (28) inst -> RR . REGISTER REGISTER

    REGISTER        shift and go to state 65


state 35

    (13) inst -> MOV . REGISTER REGISTER

    REGISTER        shift and go to state 66


state 36

    (31) inst -> JAL REGISTER . NUMBER

    NUMBER          shift and go to state 67


state 37

    (29) inst -> RL REGISTER . REGISTER

    REGISTER        shift and go to state 68


state 38

    (4) inst -> WORD NUMBER . NUMBER

    NUMBER          shift and go to state 69


state 39

    (30) inst -> JMP REGISTER . NUMBER

    NUMBER          shift and go to state 70


state 40

    (24) inst -> SL REGISTER . REGISTER

    REGISTER        shift and go to state 71


state 41

    (15) inst -> LIH REGISTER . NUMBER

    NUMBER          shift and go to state 72


state 42

    (20) inst -> AND REGISTER . REGISTER

    REGISTER        shift and go to state 73


state 43

    (18) inst -> SUB REGISTER . REGISTER

    REGISTER        shift and go to state 74


state 44

    (9) inst -> SWI NUMBER .

    WORD            reduce using rule 9 (inst -> SWI NUMBER .)
    FILL            reduce using rule 9 (inst -> SWI NUMBER .)
    NOP             reduce using rule 9 (inst -> SWI NUMBER .)
    EI              reduce using rule 9 (inst -> SWI NUMBER .)
    DI              reduce using rule 9 (inst -> SWI NUMBER .)
    SWI             reduce using rule 9 (inst -> SWI NUMBER .)
    USR             reduce using rule 9 (inst -> SWI NUMBER .)
    LD              reduce using rule 9 (inst -> SWI NUMBER .)
    ST              reduce using rule 9 (inst -> SWI NUMBER .)
    MOV             reduce using rule 9 (inst -> SWI NUMBER .)
    LIL             reduce using rule 9 (inst -> SWI NUMBER .)
    LIH             reduce using rule 9 (inst -> SWI NUMBER .)
    ADD             reduce using rule 9 (inst -> SWI NUMBER .)
    ADC             reduce using rule 9 (inst -> SWI NUMBER .)
    SUB             reduce using rule 9 (inst -> SWI NUMBER .)
    SBC             reduce using rule 9 (inst -> SWI NUMBER .)
    AND             reduce using rule 9 (inst -> SWI NUMBER .)
    OR              reduce using rule 9 (inst -> SWI NUMBER .)
    XOR             reduce using rule 9 (inst -> SWI NUMBER .)
    NOT             reduce using rule 9 (inst -> SWI NUMBER .)
    SL              reduce using rule 9 (inst -> SWI NUMBER .)
    SRL             reduce using rule 9 (inst -> SWI NUMBER .)
    SRA             reduce using rule 9 (inst -> SWI NUMBER .)
    RRA             reduce using rule 9 (inst -> SWI NUMBER .)
    RR              reduce using rule 9 (inst -> SWI NUMBER .)
    RL              reduce using rule 9 (inst -> SWI NUMBER .)
    JMP             reduce using rule 9 (inst -> SWI NUMBER .)
    JAL             reduce using rule 9 (inst -> SWI NUMBER .)
    BR              reduce using rule 9 (inst -> SWI NUMBER .)
    BC              reduce using rule 9 (inst -> SWI NUMBER .)
    BO              reduce using rule 9 (inst -> SWI NUMBER .)
    BN              reduce using rule 9 (inst -> SWI NUMBER .)
    BZ              reduce using rule 9 (inst -> SWI NUMBER .)
    $end            reduce using rule 9 (inst -> SWI NUMBER .)


state 45

    (5) inst -> FILL NUMBER . NUMBER

    NUMBER          shift and go to state 75


state 46

    (27) inst -> RRA REGISTER . REGISTER

    REGISTER        shift and go to state 76


state 47

    (1) program -> inst instlist .

    $end            reduce using rule 1 (program -> inst instlist .)


state 48

    (2) instlist -> inst . instlist
    (2) instlist -> . inst instlist
    (3) instlist -> .
    (4) inst -> . WORD NUMBER NUMBER
    (5) inst -> . FILL NUMBER NUMBER
    (6) inst -> . NOP
    (7) inst -> . EI
    (8) inst -> . DI
    (9) inst -> . SWI NUMBER
    (10) inst -> . USR
    (11) inst -> . LD REGISTER REGISTER NUMBER
    (12) inst -> . ST REGISTER REGISTER NUMBER
    (13) inst -> . MOV REGISTER REGISTER
    (14) inst -> . LIL REGISTER NUMBER
    (15) inst -> . LIH REGISTER NUMBER
    (16) inst -> . ADD REGISTER REGISTER
    (17) inst -> . ADC REGISTER REGISTER
    (18) inst -> . SUB REGISTER REGISTER
    (19) inst -> . SBC REGISTER REGISTER
    (20) inst -> . AND REGISTER REGISTER
    (21) inst -> . OR REGISTER REGISTER
    (22) inst -> . XOR REGISTER REGISTER
    (23) inst -> . NOT REGISTER REGISTER
    (24) inst -> . SL REGISTER REGISTER
    (25) inst -> . SRL REGISTER REGISTER
    (26) inst -> . SRA REGISTER REGISTER
    (27) inst -> . RRA REGISTER REGISTER
    (28) inst -> . RR REGISTER REGISTER
    (29) inst -> . RL REGISTER REGISTER
    (30) inst -> . JMP REGISTER NUMBER
    (31) inst -> . JAL REGISTER NUMBER
    (32) inst -> . BR NUMBER
    (33) inst -> . BC NUMBER
    (34) inst -> . BO NUMBER
    (35) inst -> . BN NUMBER
    (36) inst -> . BZ NUMBER

    $end            reduce using rule 3 (instlist -> .)
    WORD            shift and go to state 3
    FILL            shift and go to state 12
    NOP             shift and go to state 28
    EI              shift and go to state 8
    DI              shift and go to state 15
    SWI             shift and go to state 11
    USR             shift and go to state 7
    LD              shift and go to state 33
    ST              shift and go to state 18
    MOV             shift and go to state 35
    LIL             shift and go to state 27
    LIH             shift and go to state 6
    ADD             shift and go to state 25
    ADC             shift and go to state 24
    SUB             shift and go to state 10
    SBC             shift and go to state 16
    AND             shift and go to state 9
    OR              shift and go to state 17
    XOR             shift and go to state 20
    NOT             shift and go to state 22
    SL              shift and go to state 5
    SRL             shift and go to state 19
    SRA             shift and go to state 30
    RRA             shift and go to state 13
    RR              shift and go to state 34
    RL              shift and go to state 2
    JMP             shift and go to state 4
    JAL             shift and go to state 1
    BR              shift and go to state 29
    BC              shift and go to state 23
    BO              shift and go to state 21
    BN              shift and go to state 32
    BZ              shift and go to state 26

    inst                           shift and go to state 48
    instlist                       shift and go to state 77

state 49

    (19) inst -> SBC REGISTER . REGISTER

    REGISTER        shift and go to state 78


state 50

    (21) inst -> OR REGISTER . REGISTER

    REGISTER        shift and go to state 79


state 51

    (12) inst -> ST REGISTER . REGISTER NUMBER

    REGISTER        shift and go to state 80


state 52

    (25) inst -> SRL REGISTER . REGISTER

    REGISTER        shift and go to state 81


state 53

    (22) inst -> XOR REGISTER . REGISTER

    REGISTER        shift and go to state 82


state 54

    (34) inst -> BO NUMBER .

    WORD            reduce using rule 34 (inst -> BO NUMBER .)
    FILL            reduce using rule 34 (inst -> BO NUMBER .)
    NOP             reduce using rule 34 (inst -> BO NUMBER .)
    EI              reduce using rule 34 (inst -> BO NUMBER .)
    DI              reduce using rule 34 (inst -> BO NUMBER .)
    SWI             reduce using rule 34 (inst -> BO NUMBER .)
    USR             reduce using rule 34 (inst -> BO NUMBER .)
    LD              reduce using rule 34 (inst -> BO NUMBER .)
    ST              reduce using rule 34 (inst -> BO NUMBER .)
    MOV             reduce using rule 34 (inst -> BO NUMBER .)
    LIL             reduce using rule 34 (inst -> BO NUMBER .)
    LIH             reduce using rule 34 (inst -> BO NUMBER .)
    ADD             reduce using rule 34 (inst -> BO NUMBER .)
    ADC             reduce using rule 34 (inst -> BO NUMBER .)
    SUB             reduce using rule 34 (inst -> BO NUMBER .)
    SBC             reduce using rule 34 (inst -> BO NUMBER .)
    AND             reduce using rule 34 (inst -> BO NUMBER .)
    OR              reduce using rule 34 (inst -> BO NUMBER .)
    XOR             reduce using rule 34 (inst -> BO NUMBER .)
    NOT             reduce using rule 34 (inst -> BO NUMBER .)
    SL              reduce using rule 34 (inst -> BO NUMBER .)
    SRL             reduce using rule 34 (inst -> BO NUMBER .)
    SRA             reduce using rule 34 (inst -> BO NUMBER .)
    RRA             reduce using rule 34 (inst -> BO NUMBER .)
    RR              reduce using rule 34 (inst -> BO NUMBER .)
    RL              reduce using rule 34 (inst -> BO NUMBER .)
    JMP             reduce using rule 34 (inst -> BO NUMBER .)
    JAL             reduce using rule 34 (inst -> BO NUMBER .)
    BR              reduce using rule 34 (inst -> BO NUMBER .)
    BC              reduce using rule 34 (inst -> BO NUMBER .)
    BO              reduce using rule 34 (inst -> BO NUMBER .)
    BN              reduce using rule 34 (inst -> BO NUMBER .)
    BZ              reduce using rule 34 (inst -> BO NUMBER .)
    $end            reduce using rule 34 (inst -> BO NUMBER .)


state 55

    (23) inst -> NOT REGISTER . REGISTER

    REGISTER        shift and go to state 83


state 56

    (33) inst -> BC NUMBER .

    WORD            reduce using rule 33 (inst -> BC NUMBER .)
    FILL            reduce using rule 33 (inst -> BC NUMBER .)
    NOP             reduce using rule 33 (inst -> BC NUMBER .)
    EI              reduce using rule 33 (inst -> BC NUMBER .)
    DI              reduce using rule 33 (inst -> BC NUMBER .)
    SWI             reduce using rule 33 (inst -> BC NUMBER .)
    USR             reduce using rule 33 (inst -> BC NUMBER .)
    LD              reduce using rule 33 (inst -> BC NUMBER .)
    ST              reduce using rule 33 (inst -> BC NUMBER .)
    MOV             reduce using rule 33 (inst -> BC NUMBER .)
    LIL             reduce using rule 33 (inst -> BC NUMBER .)
    LIH             reduce using rule 33 (inst -> BC NUMBER .)
    ADD             reduce using rule 33 (inst -> BC NUMBER .)
    ADC             reduce using rule 33 (inst -> BC NUMBER .)
    SUB             reduce using rule 33 (inst -> BC NUMBER .)
    SBC             reduce using rule 33 (inst -> BC NUMBER .)
    AND             reduce using rule 33 (inst -> BC NUMBER .)
    OR              reduce using rule 33 (inst -> BC NUMBER .)
    XOR             reduce using rule 33 (inst -> BC NUMBER .)
    NOT             reduce using rule 33 (inst -> BC NUMBER .)
    SL              reduce using rule 33 (inst -> BC NUMBER .)
    SRL             reduce using rule 33 (inst -> BC NUMBER .)
    SRA             reduce using rule 33 (inst -> BC NUMBER .)
    RRA             reduce using rule 33 (inst -> BC NUMBER .)
    RR              reduce using rule 33 (inst -> BC NUMBER .)
    RL              reduce using rule 33 (inst -> BC NUMBER .)
    JMP             reduce using rule 33 (inst -> BC NUMBER .)
    JAL             reduce using rule 33 (inst -> BC NUMBER .)
    BR              reduce using rule 33 (inst -> BC NUMBER .)
    BC              reduce using rule 33 (inst -> BC NUMBER .)
    BO              reduce using rule 33 (inst -> BC NUMBER .)
    BN              reduce using rule 33 (inst -> BC NUMBER .)
    BZ              reduce using rule 33 (inst -> BC NUMBER .)
    $end            reduce using rule 33 (inst -> BC NUMBER .)


state 57

    (17) inst -> ADC REGISTER . REGISTER

    REGISTER        shift and go to state 84


state 58

    (16) inst -> ADD REGISTER . REGISTER

    REGISTER        shift and go to state 85


state 59

    (36) inst -> BZ NUMBER .

    WORD            reduce using rule 36 (inst -> BZ NUMBER .)
    FILL            reduce using rule 36 (inst -> BZ NUMBER .)
    NOP             reduce using rule 36 (inst -> BZ NUMBER .)
    EI              reduce using rule 36 (inst -> BZ NUMBER .)
    DI              reduce using rule 36 (inst -> BZ NUMBER .)
    SWI             reduce using rule 36 (inst -> BZ NUMBER .)
    USR             reduce using rule 36 (inst -> BZ NUMBER .)
    LD              reduce using rule 36 (inst -> BZ NUMBER .)
    ST              reduce using rule 36 (inst -> BZ NUMBER .)
    MOV             reduce using rule 36 (inst -> BZ NUMBER .)
    LIL             reduce using rule 36 (inst -> BZ NUMBER .)
    LIH             reduce using rule 36 (inst -> BZ NUMBER .)
    ADD             reduce using rule 36 (inst -> BZ NUMBER .)
    ADC             reduce using rule 36 (inst -> BZ NUMBER .)
    SUB             reduce using rule 36 (inst -> BZ NUMBER .)
    SBC             reduce using rule 36 (inst -> BZ NUMBER .)
    AND             reduce using rule 36 (inst -> BZ NUMBER .)
    OR              reduce using rule 36 (inst -> BZ NUMBER .)
    XOR             reduce using rule 36 (inst -> BZ NUMBER .)
    NOT             reduce using rule 36 (inst -> BZ NUMBER .)
    SL              reduce using rule 36 (inst -> BZ NUMBER .)
    SRL             reduce using rule 36 (inst -> BZ NUMBER .)
    SRA             reduce using rule 36 (inst -> BZ NUMBER .)
    RRA             reduce using rule 36 (inst -> BZ NUMBER .)
    RR              reduce using rule 36 (inst -> BZ NUMBER .)
    RL              reduce using rule 36 (inst -> BZ NUMBER .)
    JMP             reduce using rule 36 (inst -> BZ NUMBER .)
    JAL             reduce using rule 36 (inst -> BZ NUMBER .)
    BR              reduce using rule 36 (inst -> BZ NUMBER .)
    BC              reduce using rule 36 (inst -> BZ NUMBER .)
    BO              reduce using rule 36 (inst -> BZ NUMBER .)
    BN              reduce using rule 36 (inst -> BZ NUMBER .)
    BZ              reduce using rule 36 (inst -> BZ NUMBER .)
    $end            reduce using rule 36 (inst -> BZ NUMBER .)


state 60

    (14) inst -> LIL REGISTER . NUMBER
